@@ -1,3 +1,10 @@
+libhdate (1.4.18)
+
+  * Fix longitude positive and negative directions.
+  * in the hdate example make the times printout more verbose
+  	
+  -- Yaacov Zamir <kzamir@wall.co.il>  Wed, 3 Mar 2010 22:00
+  
 libhdate (1.4.14)
 
   * Fix --localedir configure option and add a gettext localedir indicator
